# lua---kinect

./: CMakeLists.txt  FindLibusb.cmake  README.md  cbf.cpp  cbf.h  depth_to_point_cloud_par.cu  kinect-1.0-1.rockspec  kinect.cpp  kinect.lua  preprocess.cpp  preprocess.h
cross_bf/: Makefile  README.txt  cbf_util.cc  cbf_util.cc~  cbf_util.h  cross_bilateral_filter  cross_bilateral_filter.cpp  cross_bilateral_filter_wrapper.m  demo_mex_cross_bilateral_filter.m  img_depth.pgm  img_rgb.ppm  mex_cross_bilateral_filter.cpp  mex_cross_bilateral_filter.cpp~  mex_cross_bilateral_filter.mexa64  my_image.ppm
cross_bf/include/.svn/: all-wcprops  entries
cross_bf/include/.svn/text-base/: array.h.svn-base
generic/: kinect.cpp
